--- a/spik/src/main/res/layout/activity_connection.xml
+++ b/spik/src/main/res/layout/activity_connection.xml
@@ -3,10 +3,31 @@
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
+              android:gravity="center"
         >
+
+    <ImageView android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:contentDescription="Application logo"
+    />
 
     <Button android:layout_gravity="center_horizontal"
             android:layout_width="200dp" android:layout_height="60dp"
             android:text="@string/connect_lan"
+            android:drawableLeft="@drawable/ic_signal_wifi_4_bar_lock_white_24dp"
+            android:onClick="handleLanConnection"/>
+
+    <Button android:layout_gravity="center_horizontal"
+            android:layout_width="200dp" android:layout_height="60dp"
+            android:text="@string/connect_bluetooth"
+            android:drawableLeft="@drawable/ic_bluetooth_white_24dp"
+            android:enabled="false"
+            android:onClick="handleLanConnection"/>
+
+    <Button android:layout_gravity="center_horizontal"
+            android:layout_width="200dp" android:layout_height="60dp"
+            android:text="@string/connect_usb"
+            android:drawableLeft="@drawable/ic_usb_white_24dp"
+            android:enabled="false"
             android:onClick="handleLanConnection"/>
 </LinearLayout>
