--- a/spik/src/main/res/layout/computer_item.xml
+++ b/spik/src/main/res/layout/computer_item.xml
@@ -3,19 +3,18 @@
               android:orientation="horizontal"
               android:layout_width="fill_parent"
               android:layout_height="match_parent"
-              android:layout_margin="5dp"
+              android:layout_margin="8dp"
         >
 
     <ImageView android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_dvr_white_18dp"
                android:layout_gravity="center"
-               android:layout_margin="5dp"
-            />
+    />
 
     <TextView android:id="@+id/computer_name"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:gravity="center_vertical"
-            />
+              android:layout_marginLeft="16dp"/>
 </LinearLayout>
