--- a/spik/src/main/res/layout/activity_connected.xml
+++ b/spik/src/main/res/layout/activity_connected.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="@string/disconnect_btn"
+            android:onClick="disconnect"
     />
 
 </LinearLayout>
