--- a/spik/src/main/res/layout/activity_connection.xml
+++ b/spik/src/main/res/layout/activity_connection.xml
@@ -15,19 +15,19 @@
             android:layout_width="200dp" android:layout_height="60dp"
             android:text="@string/connect_lan"
             android:drawableLeft="@drawable/ic_signal_wifi_4_bar_lock_white_24dp"
-            android:onClick="handleLanConnection"/>
+            android:onClick="connectOnLan"/>
 
     <Button android:layout_gravity="center_horizontal"
             android:layout_width="200dp" android:layout_height="60dp"
             android:text="@string/connect_bluetooth"
             android:drawableLeft="@drawable/ic_bluetooth_white_24dp"
             android:enabled="false"
-            android:onClick="handleLanConnection"/>
+            android:onClick="connectOnLan"/>
 
     <Button android:layout_gravity="center_horizontal"
             android:layout_width="200dp" android:layout_height="60dp"
             android:text="@string/connect_usb"
             android:drawableLeft="@drawable/ic_usb_white_24dp"
             android:enabled="false"
-            android:onClick="handleLanConnection"/>
+            android:onClick="connectOnLan"/>
 </LinearLayout>
